feat: add users creation and login endpoint
