# src/index.ts
@@ -1,18 +1,33 @@
-import express from 'express';
+import express, {NextFunction, Request, Response} from 'express';
+import dotenv from "dotenv";
+import usersRouter from "./modules/users/UsersRoute";
+import weatherRouter from "./modules/weather/WeatherRoute";
 const app = express();
-import  * as db from './utils/databaseConnector.js';
-import * as user from './modules/users/user.js';
 
-db.connectToDb();
+dotenv.config();
 
-app.get('/', (req, res) => {
-    res.status(200).json({ answer: 'Hello world !' });
+
+
+app.use('/v1', (req: Request, res: Response, next: NextFunction) => {
+    console.log("API entry !");
+    next();
+})
+
+app.post("/v1", (req: Request, res: Response) => {
+    res.status(200).json({message: "Hello world !"})
 })
 
 app.use(express.json());
 
-app.use('/user', user.user());
+app.use('/v1/users', usersRouter);
+
+app.use('/v1/weather', weatherRouter)
 
 app.listen(8080, () => {
-    console.log('Server started on port 8080');
+    console.log('Server started on port 8080 : http://localhost:8080/v1');
 });
+
+// initialize({
+//     app,
+//     apiDoc:
+// });
